# ricecoder

./: .gitignore  .npmignore  BETA_v0.3.0_RELEASE_SUMMARY.md  CACHING_STRATEGY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXAMPLES.md  GITHUB_RELEASE_v0.3.0_BETA.md  INSTALLATION.md  INSTALL_QUICK_REFERENCE.md  INTEGRATION_SUMMARY.md  LICENSE.md  PERFORMANCE_PROFILING_GUIDE.md  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  POST_RELEASE_ROADMAP.md  PUBLISHING.md  README.md  RELEASE_NOTES_v0.1.4_ALPHA.md  RELEASE_NOTES_v0.1.5_ALPHA.md  RELEASE_NOTES_v0.1.6_ALPHA.md  RELEASE_NOTES_v0.1.6_INSTALLATION.md  RELEASE_NOTES_v0.1.71_ALPHA.md  RELEASE_NOTES_v0.1.7_ALPHA.md  RELEASE_NOTES_v0.3.0_BETA.md  RELEASE_NOTES_v0.4.0_BETA.md  RELEASE_NOTES_v0.5.0_BETA.md  RELEASE_NOTES_v0.6.0_BETA.md  RELEASE_NOTES_v0.6.0_INSTALLATION.md  RELEASE_PROCESS.md  SECURITY.md  TASK_23.5_COMPLETION_REPORT.md  TASK_29_COMPLETION_SUMMARY.md  TERMINAL_EDITOR_INTEGRATION_SUMMARY.md  TESTING.md  check_mcp.bat  cliff.toml  clippy-output.txt  (+18 more)
crates/ricecoder-activity-log/: Cargo.toml  README.md
crates/ricecoder-activity-log/.serena/: project.yml
crates/ricecoder-activity-log/src/: audit.rs  di.rs  error.rs  events.rs  lib.rs  logger.rs  monitoring.rs  session_tracking.rs  storage.rs
crates/ricecoder-agents/: CHANGELOG.md  Cargo.toml  README.md
crates/ricecoder-agents/.serena/: project.yml
crates/ricecoder-agents/src/: coordinator.rs  coordinator_properties.rs  error.rs  executor.rs  lib.rs  mcp_integration.rs  metrics.rs  models.rs  orchestrator.rs  orchestrator_properties.rs  registry.rs  scheduler.rs  scheduler_properties.rs  tool_invokers.rs  tool_registry.rs  use_cases.rs
crates/ricecoder-agents/tests/: domain_agents_integration.rs  domain_coordinator_tests.rs  error_tests.rs  mcp_integration_tests.rs  models_tests.rs  tool_invokers_tests.rs
crates/ricecoder-api/: Cargo.toml  README.md
crates/ricecoder-api/.serena/: project.yml
crates/ricecoder-api/src/: error.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs  state.rs
crates/ricecoder-application/: Cargo.toml  README.md
crates/ricecoder-application/.serena/: project.yml
crates/ricecoder-application/src/: dto.rs  errors.rs  events.rs  lib.rs  ports.rs
crates/ricecoder-application/tests/: service_tests.rs
crates/ricecoder-benchmark/: Cargo.toml  README.md
crates/ricecoder-benchmark/.serena/: project.yml
crates/ricecoder-benchmark/src/: cli.rs  error.rs  evaluator.rs  exercise.rs  lib.rs  results.rs  runner.rs
crates/ricecoder-beta/: Cargo.toml  README.md
crates/ricecoder-beta/.serena/: project.yml
crates/ricecoder-beta/src/: analytics.rs  compliance.rs  feedback.rs  lib.rs  main.rs  validation.rs
crates/ricecoder-cache/: Cargo.toml  README.md
crates/ricecoder-cache/.serena/: project.yml
crates/ricecoder-cache/src/: cache.rs  compression.rs  di.rs  error.rs  lib.rs  metrics.rs  storage.rs  strategy.rs
crates/ricecoder-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/ricecoder-cli/.serena/: project.yml
crates/ricecoder-cli/src/: accessibility.rs  async_optimization.rs  branding.rs  chat.rs  completion.rs  di.rs  error.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  memory_optimization.rs  output.rs  profiling.rs  progress.rs  router.rs  sync_utils.rs
crates/ricecoder-cli/tests/: accessibility_tests.rs  binary_execution_tests.rs  branding_tests.rs  chat_tests.rs  completion_tests.rs  custom_storage_tests.rs  custom_tests.rs  di_integration.rs  di_tests.rs  error_tests.rs  hooks_tests.rs  installation_verification.rs  integration_binary_execution.rs  integration_commands.rs  integration_curl_install.rs  integration_multi_call_binary.rs  integration_package_managers.rs  integration_tui.rs  lifecycle_tests.rs  logging_tests.rs  lsp_tests.rs  output_tests.rs  profiling_tests.rs  progress_tests.rs  property_command_routing.rs  property_config_operations.rs  property_custom_commands.proptest-regressions  property_custom_commands.rs  property_error_recovery.rs  property_init_non_interactive.rs  property_output_formatting.rs  property_path_resolution.rs  property_provider_fallback.rs  property_shell_completion.rs  router_tests.rs  sessions_tests.rs  sync_utils_tests.rs  tui_tests.rs  unit_branding.rs  unit_chat_mode.rs  (+6 more)
crates/ricecoder-commands/: Cargo.toml  README.md
crates/ricecoder-commands/.serena/: project.yml
crates/ricecoder-commands/src/: config.rs  di.rs  error.rs  executor.rs  lib.rs  manager.rs  output_injection.rs  registry.rs  template.rs  types.rs
crates/ricecoder-commands/tests/: executor_tests.rs  manager_tests.rs  property_tests.rs  registry_tests.rs
crates/ricecoder-common/: Cargo.toml
crates/ricecoder-common/src/: cache.rs  collection.rs  di.rs  error.rs  json_store.rs  lib.rs  logging.rs  validation.rs
crates/ricecoder-completion/: Cargo.toml  README.md
crates/ricecoder-completion/.serena/: project.yml
crates/ricecoder-completion/src/: config.rs  context.rs  di.rs  engine.rs  external_lsp_proxy.rs  ghost_text.rs  ghost_text_state.rs  history.rs  language.rs  lib.rs  providers.rs  ranker.rs  types.rs
crates/ricecoder-config/: Cargo.toml  README.md
crates/ricecoder-continuous-improvement/: Cargo.toml  README.md
crates/ricecoder-di/: Cargo.toml  DEPENDENCY_GRAPH.md  README.md
crates/ricecoder-domain/: Cargo.toml  README.md
crates/ricecoder-domain-agents/: Cargo.toml  README.md
crates/ricecoder-execution/: Cargo.toml  README.md
crates/ricecoder-external-lsp/: Cargo.toml  README.md  TIER1_SERVERS.md
crates/ricecoder-files/: Cargo.toml  README.md
crates/ricecoder-generation/: Cargo.toml  README.md
crates/ricecoder-github/: Cargo.toml  README.md
crates/ricecoder-help/: CHANGELOG.md  Cargo.toml  README.md
crates/ricecoder-hooks/: Cargo.toml  README.md
crates/ricecoder-http/: Cargo.toml  README.md
crates/ricecoder-ide/: Cargo.toml  README.md
crates/ricecoder-images/: Cargo.toml  README.md
crates/ricecoder-industry/: Cargo.toml  README.md
crates/ricecoder-keybinds/: Cargo.toml  README.md
crates/ricecoder-learning/: Cargo.toml  README.md
(+2168 files in other folders)
