[package]
name = "ricecoder-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ricecoder = { path = "crates/ricecoder-cli", version = "0.1" }
ricecoder-agents = { path = "crates/ricecoder-agents", version = "0.1" }
ricecoder-commands = { path = "crates/ricecoder-commands", version = "0.1" }
ricecoder-completion = { path = "crates/ricecoder-completion", version = "0.1" }
ricecoder-domain-agents = { path = "crates/ricecoder-domain-agents", version = "0.1" }
ricecoder-execution = { path = "crates/ricecoder-execution", version = "0.1" }
ricecoder-external-lsp = { path = "crates/ricecoder-external-lsp", version = "0.1" }
ricecoder-files = { path = "crates/ricecoder-files", version = "0.1" }
ricecoder-generation = { path = "crates/ricecoder-generation", version = "0.1" }
ricecoder-github = { path = "crates/ricecoder-github", version = "0.1" }
ricecoder-help = { path = "crates/ricecoder-help", version = "0.1" }
ricecoder-hooks = { path = "crates/ricecoder-hooks", version = "0.1" }
ricecoder-ide = { path = "crates/ricecoder-ide", version = "0.1" }
ricecoder-images = { path = "crates/ricecoder-images", version = "0.1" }
ricecoder-keybinds = { path = "crates/ricecoder-keybinds", version = "0.1" }
ricecoder-learning = { path = "crates/ricecoder-learning", version = "0.1" }
ricecoder-local-models = { path = "crates/ricecoder-local-models", version = "0.1" }
ricecoder-lsp = { path = "crates/ricecoder-lsp", version = "0.1" }
ricecoder-mcp = { path = "crates/ricecoder-mcp", version = "0.1" }
ricecoder-modes = { path = "crates/ricecoder-modes", version = "0.1" }
ricecoder-orchestration = { path = "crates/ricecoder-orchestration", version = "0.1" }
ricecoder-permissions = { path = "crates/ricecoder-permissions", version = "0.1" }
ricecoder-providers = { path = "crates/ricecoder-providers", version = "0.1" }
ricecoder-refactoring = { path = "crates/ricecoder-refactoring", version = "0.1" }
ricecoder-research = { path = "crates/ricecoder-research", version = "0.1" }
ricecoder-sessions = { path = "crates/ricecoder-sessions", version = "0.1" }
ricecoder-specs = { path = "crates/ricecoder-specs", version = "0.1" }
ricecoder-storage = { path = "crates/ricecoder-storage", version = "0.1" }
ricecoder-teams = { path = "crates/ricecoder-teams", version = "0.1" }
ricecoder-tools = { path = "crates/ricecoder-tools", version = "0.1" }
ricecoder-tui = { path = "crates/ricecoder-tui", version = "0.1" }
ricecoder-undo-redo = { path = "crates/ricecoder-undo-redo", version = "0.1" }
ricecoder-vcs = { path = "crates/ricecoder-vcs", version = "0.1" }
ricecoder-workflows = { path = "crates/ricecoder-workflows", version = "0.1" }
ricecoder-security = { path = "crates/ricecoder-security", version = "0.1" }
ricecoder-performance = { path = "crates/ricecoder-performance", version = "0.1" }
ricecoder-monitoring = { path = "crates/ricecoder-monitoring", version = "0.1" }
tokio = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[workspace]
members = [
    "crates/ricecoder-storage",
    "crates/ricecoder-cli",
    "crates/ricecoder-providers",
    "crates/ricecoder-permissions",
    "crates/ricecoder-commands",
    "crates/ricecoder-tui",
    "crates/ricecoder-local-models",
    "crates/ricecoder-specs",
    "crates/ricecoder-files",
    "crates/ricecoder-generation",
     "crates/ricecoder-research",
     "crates/ricecoder-security",
     "crates/ricecoder-agents",
     "crates/ricecoder-cache",
     "crates/ricecoder-parsers",
     "crates/ricecoder-workflows",
    "crates/ricecoder-execution",
    "crates/ricecoder-sessions",
    "crates/ricegrep",
    "crates/ricecoder-modes",
    "crates/ricecoder-lsp",
     "crates/ricecoder-completion",
    "crates/ricecoder-di",
    "crates/ricecoder-hooks",
    "crates/ricecoder-external-lsp",
    "crates/ricecoder-refactoring",
    "crates/ricecoder-keybinds",
    "crates/ricecoder-orchestration",
    "crates/ricecoder-domain-agents",
    "crates/ricecoder-domain",
    "crates/ricecoder-learning",
    "crates/ricecoder-mcp",
    "crates/ricecoder-tools",
    "crates/ricecoder-undo-redo",
    "crates/ricecoder-vcs",
    "crates/ricecoder-github",
    "crates/ricecoder-help",
    "crates/ricecoder-teams",
    "crates/ricecoder-ide",
    "crates/ricecoder-images",
    "crates/ricecoder-themes",
    "crates/ricecoder-config",
      "crates/ricecoder-industry",
     "crates/ricecoder-activity-log",
     "crates/ricecoder-api",
        "crates/ricecoder-safety",
       "crates/ricecoder-benchmark",
        "crates/ricecoder-performance",
        "crates/ricecoder-monitoring",
         "crates/ricecoder-updates",
         "crates/ricecoder-continuous-improvement",
    "crates/ricegrep",
 ]
resolver = "2"

[workspace.package]
version = "0.1.72"
edition = "2021"
authors = ["RiceCoder Contributors"]
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["ai", "coding", "assistant", "cli", "spec-driven"]
categories = ["command-line-utilities", "development-tools"]

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"
tag-prefix = "v"
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
]

# Documentation configuration for docs.rs and local rustdoc
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# Rustdoc configuration
[workspace.metadata.cargo-docs]
# Enable all features for documentation
features = ["all"]
# Include private items in documentation
document-private-items = false
# Generate documentation with examples
rustdoc-args = [
  "--cfg", "docsrs",
  "--extend-css", "docs/custom.css",
  "--html-in-header", "docs/header.html",
  "--html-after-content", "docs/footer.html"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
rustyline = "14.0"
syntect = "5.0"
term_size = "0.3"
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
lazy_static = "1.4"
mockito = "1.2"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
dotenv = "0.15"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
glob = "0.3"
walkdir = "2.0"
ratatui = "0.29"
crossterm = "0.27"
arboard = "3.3"
sha2 = "0.10"
git2 = "0.18"
similar = "2.3"
handlebars = "5.0"
heck = "0.4"
itertools = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
jsonschema = "0.18"
url = "2.5"
octocrab = { version = "0.32", default-features = false, features = ["native-tls"] }
notify = "6.1"
rustls = { git = "https://github.com/rustls/rustls", tag = "v/0.23.31", default-features = false, features = ["ring"] }
rustls-webpki = { git = "https://github.com/rustls/webpki", tag = "v/0.103.4", default-features = false, features = ["ring"] }

[patch.crates-io]
jsonwebtoken = { git = "https://github.com/jedisct1/rust-jwt-simple", package = "jwt-simple", tag = "0.12.13" }


[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
