[package]
name = "ricecoder-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ricecoder = { path = "crates/ricecoder-cli", version = "0.1" }
ricecoder-agents = { path = "crates/ricecoder-agents", version = "0.1" }
ricecoder-commands = { path = "crates/ricecoder-commands", version = "0.1" }
ricecoder-completion = { path = "crates/ricecoder-completion", version = "0.1" }
ricecoder-domain-agents = { path = "crates/ricecoder-domain-agents", version = "0.1" }
ricecoder-execution = { path = "crates/ricecoder-execution", version = "0.1" }
ricecoder-external-lsp = { path = "crates/ricecoder-external-lsp", version = "0.1" }
ricecoder-files = { path = "crates/ricecoder-files", version = "0.1" }
ricecoder-generation = { path = "crates/ricecoder-generation", version = "0.1" }
ricecoder-github = { path = "crates/ricecoder-github", version = "0.1" }
ricecoder-help = { path = "crates/ricecoder-help", version = "0.1" }
ricecoder-hooks = { path = "crates/ricecoder-hooks", version = "0.1" }
ricecoder-ide = { path = "crates/ricecoder-ide", version = "0.1" }
ricecoder-images = { path = "crates/ricecoder-images", version = "0.1" }
ricecoder-keybinds = { path = "crates/ricecoder-keybinds", version = "0.1" }
ricecoder-learning = { path = "crates/ricecoder-learning", version = "0.1" }
ricecoder-local-models = { path = "crates/ricecoder-local-models", version = "0.1" }
ricecoder-lsp = { path = "crates/ricecoder-lsp", version = "0.1" }
ricecoder-mcp = { path = "crates/ricecoder-mcp", version = "0.1" }
ricecoder-modes = { path = "crates/ricecoder-modes", version = "0.1" }
ricecoder-orchestration = { path = "crates/ricecoder-orchestration", version = "0.1" }
ricecoder-permissions = { path = "crates/ricecoder-permissions", version = "0.1" }
ricecoder-providers = { path = "crates/ricecoder-providers", version = "0.1" }
ricecoder-refactoring = { path = "crates/ricecoder-refactoring", version = "0.1" }
ricecoder-research = { path = "crates/ricecoder-research", version = "0.1" }
ricecoder-sessions = { path = "crates/ricecoder-sessions", version = "0.1" }
ricecoder-specs = { path = "crates/ricecoder-specs", version = "0.1" }
ricecoder-storage = { path = "crates/ricecoder-storage", version = "0.1" }
ricecoder-teams = { path = "crates/ricecoder-teams", version = "0.1" }
ricecoder-tools = { path = "crates/ricecoder-tools", version = "0.1" }
ricecoder-tui = { path = "crates/ricecoder-tui", version = "0.1" }
ricecoder-vcs = { path = "crates/ricecoder-vcs", version = "0.1" }
ricecoder-workflows = { path = "crates/ricecoder-workflows", version = "0.1" }
ricecoder-security = { path = "crates/ricecoder-security", version = "0.1" }
ricecoder-performance = { path = "crates/ricecoder-performance", version = "0.1" }
ricecoder-monitoring = { path = "crates/ricecoder-monitoring", version = "0.1" }
tokio = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[workspace]
members = [
    "crates/ricecoder-common",
    "crates/ricegrep-core",
    "crates/ricecoder-persistence",
    "crates/ricecoder-storage",
    "crates/ricecoder-cli",
    "crates/ricecoder-providers",
    "crates/ricecoder-permissions",
    "crates/ricecoder-commands",
    "crates/ricecoder-tui",
    "crates/ricecoder-local-models",
    "crates/ricecoder-specs",
    "crates/ricecoder-files",
    "crates/ricecoder-generation",
    "crates/ricecoder-research",
    "crates/ricecoder-security",
    "crates/ricecoder-agents",
    "crates/ricecoder-cache",
    "crates/ricecoder-parsers",
    "crates/ricecoder-workflows",
    "crates/ricecoder-execution",
    "crates/ricecoder-sessions",
    "crates/ricegrep",
    "crates/ricecoder-modes",
    "crates/ricecoder-lsp",
    "crates/ricecoder-completion",
    "crates/ricecoder-di",
    "crates/ricecoder-hooks",
    "crates/ricecoder-external-lsp",
    "crates/ricecoder-refactoring",
    "crates/ricecoder-keybinds",
    "crates/ricecoder-orchestration",
    "crates/ricecoder-domain-agents",
    "crates/ricecoder-domain",
    "crates/ricecoder-application",
    "crates/ricecoder-learning",
    "crates/ricecoder-mcp",
    "crates/ricecoder-tools",
    "crates/ricecoder-vcs",
    "crates/ricecoder-github",
    "crates/ricecoder-help",
    "crates/ricecoder-teams",
    "crates/ricecoder-ide",
    "crates/ricecoder-images",
    "crates/ricecoder-themes",
    "crates/ricecoder-config",
    "crates/ricecoder-industry",
    "crates/ricecoder-activity-log",
    "crates/ricecoder-api",
    "crates/ricecoder-safety",
    "crates/ricecoder-benchmark",
    "crates/ricecoder-performance",
    "crates/ricecoder-monitoring",
    "crates/ricecoder-updates",
    "crates/ricecoder-beta",
]
resolver = "2"

[workspace.package]
version = "0.1.72"
edition = "2021"
authors = ["RiceCoder Contributors"]
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["ai", "coding", "assistant", "cli", "spec-driven"]
categories = ["command-line-utilities", "development-tools"]

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"
tag-prefix = "v"
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
]

# Documentation configuration for docs.rs and local rustdoc
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# Rustdoc configuration
[workspace.metadata.cargo-docs]
# Enable all features for documentation
features = ["all"]
# Include private items in documentation
document-private-items = false
# Generate documentation with examples
rustdoc-args = [
  "--cfg", "docsrs",
  "--extend-css", "docs/custom.css",
  "--html-in-header", "docs/header.html",
  "--html-after-content", "docs/footer.html"
]

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
arboard = "3.3"
argon2 = "0.5"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
async-stream = "0.3"
async-trait = "0.1"
atty = "0.2"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
colored = "2.1"
config = "0.14"
criterion = { version = "0.5", features = ["html_reports"] }
crossterm = "0.27"
csv = "1.3"
ctrlc = "3.4"
dashmap = "5.5"
dirs = "5.0"
dotenv = "0.15"
env_logger = "0.11"
fastembed = "5"
flate2 = "1.0"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
fxhash = "0.2"
git2 = "0.18"
glob = "0.3"
handlebars = "5.0"
heck = "0.4"
hex = "0.4"
hmac = "0.12"
http = "0.2"
ignore = "0.4"
image = "0.25"
indicatif = "0.17.11"
itertools = "0.12"
jsonc-parser = "0.26"
jsonschema = "0.18"
jsonwebtoken = "9.3"
jwt = "0.16"
lazy_static = "1.4"
log = "0.4"
lru = "0.12"
md5 = "0.7"
memmap2 = "0.7"
mime_guess = "2.0"
mockito = "1.2"
notify = "6.1"
oauth2 = "4.4"
octocrab = { version = "0.32", default-features = false, features = ["opentls"] }

inventory = "0.3"
once_cell = "1.19"
openidconnect = "3.4"
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.31" }
opentelemetry-prometheus = "0.29"
opentelemetry_sdk = { version = "0.29" }
parking_lot = "0.12"
prometheus = "0.14"
proptest = "1.4"
proptest-derive = "0.4"
pulldown-cmark = "0.9"
qdrant-client = { version = "1.16.0", default-features = false, features = ["reqwest", "serde"] }
rand = "0.8"
ratatui = "0.29"
ratatui-explorer = "0.2"
ratatui-image = "8.0"
ratatui-textarea = "0.4"
rayon = "1.8"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
resvg = "0.37"
ricecoder-activity-log = { path = "crates/ricecoder-activity-log", version = "0.1" }
ricecoder-agents = { path = "crates/ricecoder-agents", version = "0.1" }
ricecoder-beta = { path = "crates/ricecoder-beta", version = "0.1" }
ricecoder-cache = { path = "crates/ricecoder-cache", version = "0.1" }
ricecoder-common = { path = "crates/ricecoder-common", version = "0.1" }
ricecoder-commands = { path = "crates/ricecoder-commands", version = "0.1" }
ricecoder-completion = { path = "crates/ricecoder-completion", version = "0.1" }
ricecoder-config = { path = "crates/ricecoder-config", version = "0.1" }
ricecoder-di = { path = "crates/ricecoder-di", version = "0.1" }
ricecoder-domain = { path = "crates/ricecoder-domain", version = "0.1" }
ricecoder-domain-agents = { path = "crates/ricecoder-domain-agents", version = "0.1" }
ricecoder-execution = { path = "crates/ricecoder-execution", version = "0.1" }
ricecoder-external-lsp = { path = "crates/ricecoder-external-lsp", version = "0.1" }
ricecoder-files = { path = "crates/ricecoder-files", version = "0.1" }
ricecoder-generation = { path = "crates/ricecoder-generation", version = "0.1" }
ricecoder-github = { path = "crates/ricecoder-github", version = "0.1" }
ricecoder-help = { path = "crates/ricecoder-help", version = "0.1" }
ricecoder-hooks = { path = "crates/ricecoder-hooks", version = "0.1" }
ricecoder-ide = { path = "crates/ricecoder-ide", version = "0.1" }
ricecoder-images = { path = "crates/ricecoder-images", version = "0.1" }
ricecoder-industry = { path = "crates/ricecoder-industry", version = "0.1" }
ricecoder-keybinds = { path = "crates/ricecoder-keybinds", version = "0.1" }
ricecoder-learning = { path = "crates/ricecoder-learning", version = "0.1" }
ricecoder-local-models = { path = "crates/ricecoder-local-models", version = "0.1" }
ricecoder-lsp = { path = "crates/ricecoder-lsp", version = "0.1" }
ricecoder-mcp = { path = "crates/ricecoder-mcp", version = "0.1" }
ricecoder-modes = { path = "crates/ricecoder-modes", version = "0.1" }
ricecoder-monitoring = { path = "crates/ricecoder-monitoring", version = "0.1" }
ricecoder-orchestration = { path = "crates/ricecoder-orchestration", version = "0.1" }
ricecoder-parsers = { path = "crates/ricecoder-parsers", version = "0.1" }
ricecoder-patterns = { path = "crates/ricecoder-patterns", version = "0.1" }
ricecoder-persistence = { path = "crates/ricecoder-persistence", version = "0.1" }
ricecoder-permissions = { path = "crates/ricecoder-permissions", version = "0.1" }
ricecoder-providers = { path = "crates/ricecoder-providers", version = "0.1" }
ricecoder-refactoring = { path = "crates/ricecoder-refactoring", version = "0.1" }
ricecoder-research = { path = "crates/ricecoder-research", version = "0.1" }
ricecoder-safety = { path = "crates/ricecoder-safety", version = "0.1" }
ricecoder-security = { path = "crates/ricecoder-security", version = "0.1" }
ricecoder-sessions = { path = "crates/ricecoder-sessions", version = "0.1" }
ricecoder-specs = { path = "crates/ricecoder-specs", version = "0.1" }
ricecoder-storage = { path = "crates/ricecoder-storage", version = "0.1" }
ricecoder-teams = { path = "crates/ricecoder-teams", version = "0.1" }
ricecoder-themes = { path = "crates/ricecoder-themes", version = "0.1" }
ricecoder-tools = { path = "crates/ricecoder-tools", version = "0.1" }
ricecoder-tui = { path = "crates/ricecoder-tui", version = "0.1" }
ricecoder-vcs = { path = "crates/ricecoder-vcs", version = "0.1" }
ricecoder-workflows = { path = "crates/ricecoder-workflows", version = "0.1" }
rmcp = { version = "0.11.0" }
schemars = "1.1"
rustls = { git = "https://github.com/rustls/rustls", tag = "v/0.23.31", default-features = false, features = ["ring"] }
rustls-webpki = { git = "https://github.com/rustls/webpki", tag = "v/0.103.4", default-features = false, features = ["ring"] }
rustyline = "14.0"
semver = "1.0"
sentry = { version = "0.34" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serial_test = "3.0"
sha2 = "0.10"
similar = "2.3"
# SurrealDB: NOT IN WORKSPACE - conflicts with onnxruntime (ricegrep) via ndarray version
# Defined directly in ricecoder-persistence with feature flag
# To use: cargo build -p ricecoder-persistence --features surrealdb-backend --exclude ricegrep
syntect = "5.0"
sysinfo = "0.30"
tantivy = "0.25.0"
tar = "0.4"
tempfile = "3.8"
term_size = "0.3"
thiserror = "1.0"
tiktoken-rs = "0.5"
tiny-skia = "0.11"
tokenizers = "0.15"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5" }
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tui-scrollview = "0.5"
tui-tree-widget = "0.18"
typenum = "1.0"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
unicode-width = "0.1"
url = "2.5"
usvg = "0.37"
utoipa = { version = "5.4.0" }
utoipa-swagger-ui = { version = "9.0.2" }
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.0"
[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
