[package]
name = "ricecoder-activity-log"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Structured activity logging and audit trails for RiceCoder"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["logging", "audit", "activity", "monitoring", "compliance"]

[lib]
name = "ricecoder_activity_log"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.10"

# RiceCoder internal dependencies
ricecoder-sessions = { path = "../ricecoder-sessions", version = "0.1" }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"