[package]
name = "ricecoder-activity-log"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Structured activity logging and audit trails for RiceCoder"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["logging", "audit", "activity", "monitoring", "compliance"]

[lib]
name = "ricecoder_activity_log"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }

# RiceCoder internal dependencies
ricecoder-sessions = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }