[package]
name = "ricecoder-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true

ricecoder-storage = { path = "../ricecoder-storage" }
ricecoder-providers = { path = "../ricecoder-providers" }
jsonschema.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
