[package]
name = "ricecoder-agents"
description = "Multi-agent framework for specialized task execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true

ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }
ricecoder-providers = { path = "../ricecoder-providers", version = "0.1" }
ricecoder-sessions = { path = "../ricecoder-sessions", version = "0.1" }
jsonschema.workspace = true
serde_yaml.workspace = true
reqwest = { version = "0.11", features = ["json"] }
rust-mcp-sdk = { version = "0.7", features = ["client", "stdio"], optional = true }

[features]
default = []
mcp = ["rust-mcp-sdk"]

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
tempfile.workspace = true





