[package]
name = "ricecoder-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
description = "RESTful API for RiceCoder with session management and MCP tool execution"
keywords = ["api", "rest", "axum", "ricecoder", "mcp"]

[lib]
name = "ricecoder_api"
path = "src/lib.rs"

[[bin]]
name = "ricecoder-api"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
ricecoder-sessions = { path = "../ricecoder-sessions", version = "0.1" }
ricecoder-mcp = { path = "../ricecoder-mcp", version = "0.1" }
ricecoder-security = { path = "../ricecoder-security", version = "0.1" }
ricecoder-di = { path = "../ricecoder-di", version = "0.1" }
ricecoder-activity-log = { path = "../ricecoder-activity-log", version = "0.1" }
ricecoder-agents = { path = "../ricecoder-agents", version = "0.1" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
jsonwebtoken = "9.3"
bcrypt = "0.15"
base64 = "0.22"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"