[package]
name = "ricecoder-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
description = "RESTful API for RiceCoder with session management and MCP tool execution"
keywords = ["api", "rest", "axum", "ricecoder", "mcp"]

[lib]
name = "ricecoder_api"
path = "src/lib.rs"

[[bin]]
name = "ricecoder-api"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
ricecoder-sessions = { workspace = true }
ricecoder-mcp = { workspace = true }
ricecoder-security = { workspace = true }
ricecoder-di = { workspace = true }
ricecoder-activity-log = { workspace = true }
ricecoder-agents = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio-test = { workspace = true }
