[package]
name = "ricecoder-benchmark"
description = "Aider polyglot test suite integration for LLM evaluation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }
ricecoder-providers = { workspace = true }
ricecoder-domain = { workspace = true }
ricecoder-di = { workspace = true }

[[bin]]
name = "ricecoder-benchmark"
path = "src/bin/benchmark.rs"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }