[package]
name = "ricecoder-beta"
version.workspace = true
edition.workspace = true
description = "Beta testing infrastructure for RiceCoder enterprise validation"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ricecoder-beta"
path = "src/main.rs"

[dependencies]
ricecoder-domain = { path = "../ricecoder-domain", version = "0.1" }
ricecoder-security = { path = "../ricecoder-security", version = "0.1" }
ricecoder-activity-log = { path = "../ricecoder-activity-log", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }