[package]
name = "ricecoder-beta"
version.workspace = true
edition.workspace = true
description = "Beta testing infrastructure for RiceCoder enterprise validation"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ricecoder-beta"
path = "src/main.rs"

[dependencies]
ricecoder-domain = { workspace = true }
ricecoder-security = { workspace = true }
ricecoder-activity-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }